--- a/allocation-confirmation.html
+++ b/allocation-confirmation.html
@@ -30,17 +30,21 @@
             <img src="./assets/images/bank_logo.svg" alt="logo" />
           </div>
           <div class="text">
-            <h4 class="title">
+            <h4 class="title fs-575-16">
               HDFC Banking And Financial Services Growth Direct Plan
             </h4>
-            <h4 class="text-light-2">Mutual Fund</h4>
+            <h4 class="text-light-2 fs-575-14">Mutual Fund</h4>
           </div>
         </div>
         <div class="modal-body">
           <div class="text-fields">
             <div class="custom-form-control">
               <h4 class="text-light-2">Allocation</h4>
-              <input class="custom-input active" type="text" value="30%" />
+              <input
+                class="custom-input active with-outline"
+                type="text"
+                value="30%"
+              />
             </div>
             <div class="custom-form-control">
               <h4 class="text-light-2">Amount</h4>
@@ -49,6 +53,7 @@
           </div>
 
           <div class="slidecontainer">
+            <div class="text-light-2 f-12 guide">Slide left or right</div>
             <input
               type="range"
               min="1"
@@ -61,7 +66,7 @@
 
           <div class="btns">
             <button class="btn btn-outlined-dark">Cancel</button>
-            <button class="btn btn-bg-primary">Confirm</button>
+            <button class="btn btn-bg-primary fs-575-16">Confirm</button>
           </div>
         </div>
       </div>
