--- a/profile.html
+++ b/profile.html
@@ -461,7 +461,7 @@
               href="./transactions.html"
             >
               <img
-                class="back me-2"
+                class="back me-2 d-block d-md-none"
                 src="./assets/vector/back-arrow.svg"
                 alt="back-arrow"
               />
@@ -485,12 +485,77 @@
 
                   <div class="custom-form-control">
                     <h4 class="text-light-2">DATE OF BIRTH</h4>
-                    <input
-                      class="custom-input"
-                      id="example"
-                      type="date"
-                      placeholder="DD/MM/YYYY"
-                    />
+                    <div class="with-icon">
+                      <input
+                        class="custom-input"
+                        id="example"
+                        type="date"
+                        placeholder="DD/MM/YYYY"
+                      />
+                      <svg
+                        class="icon"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16.055"
+                        viewBox="0 0 16 16.055"
+                      >
+                        <g
+                          id="Group_10631"
+                          data-name="Group 10631"
+                          transform="translate(-790 -600.973)"
+                        >
+                          <g id="Group_1614" data-name="Group 1614" opacity="0">
+                            <rect
+                              id="Rectangle_1614"
+                              data-name="Rectangle 1614"
+                              width="16"
+                              height="16"
+                              transform="translate(790 601)"
+                              fill="#ffc32c"
+                            />
+                            <path
+                              id="Rectangle_1614_-_Outline"
+                              data-name="Rectangle 1614 - Outline"
+                              d="M1,1V15H15V1H1M0,0H16V16H0Z"
+                              transform="translate(790 601)"
+                              fill="#ffc32c"
+                            />
+                          </g>
+                          <g
+                            id="calendar_1_"
+                            data-name="calendar (1)"
+                            transform="translate(791 601.473)"
+                          >
+                            <path
+                              id="Rectangle"
+                              d="M2-.5H12A2.5,2.5,0,0,1,14.5,2V12A2.5,2.5,0,0,1,12,14.5H2A2.5,2.5,0,0,1-.5,12V2A2.5,2.5,0,0,1,2-.5Zm10,14A1.5,1.5,0,0,0,13.5,12V2A1.5,1.5,0,0,0,12,.5H2A1.5,1.5,0,0,0,.5,2V12A1.5,1.5,0,0,0,2,13.5Z"
+                              transform="translate(0 1.055)"
+                              fill="#ffc32c"
+                            />
+                            <path
+                              id="Path"
+                              d="M.5,3.511a.5.5,0,0,1-.5-.5V0A.5.5,0,0,1,.5-.5.5.5,0,0,1,1,0V3.011A.5.5,0,0,1,.5,3.511Z"
+                              transform="translate(9.286)"
+                              fill="#ffc32c"
+                            />
+                            <path
+                              id="Path-2"
+                              data-name="Path"
+                              d="M.5,3.511a.5.5,0,0,1-.5-.5V0A.5.5,0,0,1,.5-.5.5.5,0,0,1,1,0V3.011A.5.5,0,0,1,.5,3.511Z"
+                              transform="translate(3.264)"
+                              fill="#ffc32c"
+                            />
+                            <path
+                              id="Path-3"
+                              data-name="Path"
+                              d="M13.549,1H0A.5.5,0,0,1,0,0H13.549a.5.5,0,0,1,0,1Z"
+                              transform="translate(0 5.522)"
+                              fill="#ffc32c"
+                            />
+                          </g>
+                        </g>
+                      </svg>
+                    </div>
                   </div>
 
                   <div class="custom-form-control">
