--- a/uploader.html
+++ b/uploader.html
@@ -102,13 +102,13 @@
               <input type="file" name="" id="file-upload" />
 
               <h4 class="fw-normal">
-                <span class="d-none d-lg-inline"
+                <span class="d-none d-lg-inline fs-16 fs-1366-14"
                   >Darg and drop files here or</span
                 >
                 <span class="text-yellow fw-bold">browse</span>
               </h4>
             </div>
-            <h4 class="text-end text-light-2 mt-2 pe-3">
+            <h4 class="text-end text-light-2 mt-2 pe-3 fs-14">
               Only Jpg and png with maximum file size 2Mb
             </h4>
 
@@ -144,7 +144,7 @@
             </div>
           </div>
         </div>
-        <button class="bottom-btn btn btn-bg-primary">Continue</button>
+        <button class="btn btn-bg-primary continue">Continue</button>
       </div>
     </section>
 
