--- a/uploading.html
+++ b/uploading.html
@@ -102,7 +102,7 @@
               </div>
             </div>
 
-            <div class="uploading">
+            <div class="uploading d-none d-md-block">
               <div class="upload-head d-flex justify-content-between">
                 <div
                   class="
@@ -116,7 +116,7 @@
                     <img src="./assets/vector/file.svg" alt="file" />
                   </div>
                   <div class="file-name">
-                    <h4 class="fw-normal">Pan card.jpg</h4>
+                    <h4 class="fw-normal fs-14">Pan card.jpg</h4>
                   </div>
                 </div>
                 <div class="cancel">
@@ -128,7 +128,9 @@
                 <div class="progress"></div>
               </div>
               <div class="upload-footer mt-1">
-                <h4 class="fw-normal text-end text-light-2">128kb</h4>
+                <h4 class="fw-normal text-end text-light-2 fs-14 fs-1366-12">
+                  128kb
+                </h4>
               </div>
             </div>
           </div>
