--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
   </head>
 
   <body class="planyybody">
-    <div id="dark-overlay-beneath" class=""></div>
-    <div id="dark-overlay" class=""></div>
-    <div id="right-menu-login" class="">
+    <div id="dark-overlay-beneath" class="d-none"></div>
+    <div id="dark-overlay" class="d-none"></div>
+    <div id="right-menu-login" class="d-none">
       <div class="close">
         <img src="./assets/images/close.svg" alt="close" />
       </div>
@@ -1677,12 +1677,79 @@
           <input class="custom-input" type="text" placeholder="Choose Date" />
         </div>
         <div class="custom-form-control mt-4">
-          <input class="custom-input" type="text" placeholder="Choose Time" />
+          <div class="with-icon">
+            <input class="custom-input" type="time" placeholder="Choose Time" />
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="17"
+              height="17"
+              viewBox="0 0 17 17"
+              class="icon no-clr"
+            >
+              <g
+                class="white-clr"
+                id="Group_10713"
+                data-name="Group 10713"
+                transform="translate(-11718.5 15196.5)"
+              >
+                <g
+                  class="no-clr"
+                  id="clock"
+                  transform="translate(11717 -15198)"
+                >
+                  <circle
+                    id="Ellipse_179"
+                    data-name="Ellipse 179"
+                    cx="8"
+                    cy="8"
+                    r="8"
+                    transform="translate(2 2)"
+                    fill="none"
+                    stroke="#31353f"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="1"
+                  />
+                  <path
+                    id="Path_10235"
+                    data-name="Path 10235"
+                    d="M12,6v4.8l3.2,1.6"
+                    transform="translate(-2 -0.8)"
+                    fill="none"
+                    stroke="#31353f"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="1"
+                  />
+                </g>
+                <g
+                  id="Rectangle_1591"
+                  data-name="Rectangle 1591"
+                  transform="translate(11719 -15196)"
+                  fill="#fff"
+                  stroke="#31353f"
+                  stroke-width="1"
+                  opacity="0"
+                  class="no-clr"
+                >
+                  <rect class="no-clr" width="16" height="16" stroke="none" />
+                  <rect
+                    class="no-clr"
+                    x="0.5"
+                    y="0.5"
+                    width="15"
+                    height="15"
+                    fill="none"
+                  />
+                </g>
+              </g>
+            </svg>
+          </div>
         </div>
         <button class="btn btn-bg-primary mt-4">Call</button>
       </div>
     </div>
-    <div class="custom-modal md" id="signup-modal">
+    <div class="custom-modal md d-none" id="signup-modal">
       <div class="close">
         <img src="./assets/images/close.svg" alt="close" />
       </div>
@@ -1756,12 +1823,66 @@
                     </li>
                   </ul>
                 </div>
-                <input
-                  class="custom-input"
-                  type="password"
-                  placeholder="Password"
-                  value="als;fjdlak"
-                />
+                <div class="with-icon">
+                  <input
+                    class="custom-input"
+                    type="password"
+                    placeholder="Password"
+                    value="als;fjdlak"
+                  />
+                  <svg
+                    class="icon no-clr"
+                    id="Component_95_6"
+                    data-name="Component 95 – 6"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="16.707"
+                    height="16.707"
+                    viewBox="0 0 16.707 16.707"
+                  >
+                    <g
+                      id="Rectangle_1590"
+                      data-name="Rectangle 1590"
+                      fill="#e8e8e8"
+                      stroke="#e8e8e8"
+                      stroke-width="1"
+                      opacity="0"
+                    >
+                      <rect width="16" height="16" stroke="none" />
+                      <rect
+                        x="0.5"
+                        y="0.5"
+                        width="15"
+                        height="15"
+                        fill="none"
+                      />
+                    </g>
+                    <g id="eye-off" transform="translate(0.68 0.68)">
+                      <path
+                        id="Path_10232"
+                        data-name="Path 10232"
+                        d="M12.518,13.478a6.847,6.847,0,0,1-4.039,1.4C3.72,14.879,1,9.439,1,9.439A12.545,12.545,0,0,1,4.44,5.4M7.051,4.163A6.2,6.2,0,0,1,8.479,4c4.76,0,7.479,5.439,7.479,5.439a12.579,12.579,0,0,1-1.469,2.169m-4.569-.728A2.04,2.04,0,1,1,7.038,8"
+                        transform="translate(-1 -1.96)"
+                        fill="none"
+                        stroke="#e8e8e8"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="1"
+                      />
+                      <line
+                        id="Line_235"
+                        data-name="Line 235"
+                        x2="15"
+                        y2="15"
+                        transform="translate(0.32 0.32)"
+                        fill="none"
+                        stroke="#e8e8e8"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="1"
+                      />
+                    </g>
+                  </svg>
+                </div>
               </div>
               <div class="custom-form-control mt-4">
                 <input
@@ -2166,6 +2287,7 @@
       }
     </script>
     <script src="./assets/js/jquery.min.js"></script>
+    <script src="./assets/js/timepicki.js"></script>
     <script src="./assets/js/index.js"></script>
   </body>
 </html>
