--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       type="text/css"
       href="./assets/css/animate.compat.css"
     />
+    <!-- DATE PICKER -->
+
+    <link rel="stylesheet" href="./assets/css/mc-calendar.min.css" />
     <link
       rel="stylesheet"
       type="text/css"
@@ -1674,7 +1677,77 @@
           />
         </div>
         <div class="custom-form-control mt-4">
-          <input class="custom-input" type="text" placeholder="Choose Date" />
+          <div class="with-icon">
+            <input
+              class="custom-input"
+              type="text"
+              id="example"
+              type="date"
+              placeholder="Choose Date"
+            /><svg
+              class="icon"
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16.055"
+              viewBox="0 0 16 16.055"
+            >
+              <g
+                id="Group_10631"
+                data-name="Group 10631"
+                transform="translate(-790 -600.973)"
+              >
+                <g id="Group_1614" data-name="Group 1614" opacity="0">
+                  <rect
+                    id="Rectangle_1614"
+                    data-name="Rectangle 1614"
+                    width="16"
+                    height="16"
+                    transform="translate(790 601)"
+                    fill=""
+                  />
+                  <path
+                    id="Rectangle_1614_-_Outline"
+                    data-name="Rectangle 1614 - Outline"
+                    d="M1,1V15H15V1H1M0,0H16V16H0Z"
+                    transform="translate(790 601)"
+                    fill=""
+                  />
+                </g>
+                <g
+                  id="calendar_1_"
+                  data-name="calendar (1)"
+                  transform="translate(791 601.473)"
+                >
+                  <path
+                    id="Rectangle"
+                    d="M2-.5H12A2.5,2.5,0,0,1,14.5,2V12A2.5,2.5,0,0,1,12,14.5H2A2.5,2.5,0,0,1-.5,12V2A2.5,2.5,0,0,1,2-.5Zm10,14A1.5,1.5,0,0,0,13.5,12V2A1.5,1.5,0,0,0,12,.5H2A1.5,1.5,0,0,0,.5,2V12A1.5,1.5,0,0,0,2,13.5Z"
+                    transform="translate(0 1.055)"
+                    fill=""
+                  />
+                  <path
+                    id="Path"
+                    d="M.5,3.511a.5.5,0,0,1-.5-.5V0A.5.5,0,0,1,.5-.5.5.5,0,0,1,1,0V3.011A.5.5,0,0,1,.5,3.511Z"
+                    transform="translate(9.286)"
+                    fill=""
+                  />
+                  <path
+                    id="Path-2"
+                    data-name="Path"
+                    d="M.5,3.511a.5.5,0,0,1-.5-.5V0A.5.5,0,0,1,.5-.5.5.5,0,0,1,1,0V3.011A.5.5,0,0,1,.5,3.511Z"
+                    transform="translate(3.264)"
+                    fill=""
+                  />
+                  <path
+                    id="Path-3"
+                    data-name="Path"
+                    d="M13.549,1H0A.5.5,0,0,1,0,0H13.549a.5.5,0,0,1,0,1Z"
+                    transform="translate(0 5.522)"
+                    fill=""
+                  />
+                </g>
+              </g>
+            </svg>
+          </div>
         </div>
         <div class="custom-form-control mt-4">
           <div class="with-icon">
@@ -2286,8 +2359,13 @@
         });
       }
     </script>
+
+    <!-- DATE PICKER -->
+
+    <script src="./assets/js/mc-calendar.min.js"></script>
     <script src="./assets/js/jquery.min.js"></script>
     <script src="./assets/js/timepicki.js"></script>
+    <script defer src="./assets/js/details.js"></script>
     <script src="./assets/js/index.js"></script>
   </body>
 </html>
