adds otp event listener :

--- a/index.html
+++ b/index.html
@@ -1973,7 +1973,9 @@
                   mt-sm-5 mt-4
                 "
               >
-                <button class="btn btn-bg-primary">Sign up</button>
+                <button class="btn btn-bg-primary" id="signup-btn">
+                  Sign up
+                </button>
                 <span class="my-2 my-sm-0 d-sm-inline d-block"> or </span>
                 <button class="btn btn-rounded">
                   <img src="./assets/images/google.svg" alt="google" /> Google
