fixes refer and invest padding

--- a/refer-and-invest.html
+++ b/refer-and-invest.html
@@ -449,7 +449,10 @@
 
       <!-- --------------------------------------------- MAIN START --------------------------------------------- -->
 
-      <main id="sidenav-right-content" class="n-rm-padding">
+      <main
+        id="sidenav-right-content"
+        class="n-rm-padding refer-and-invest-right"
+      >
         <section id="refer-and-invest">
           <h2 class="title">
             <img src="./assets/vector/back-arrow.svg" alt="back" /> Refer and
