fixes arrow in transaction page

--- a/transaction.html
+++ b/transaction.html
@@ -452,17 +452,15 @@
       <main id="sidenav-right-content" class="transactions-right">
         <section id="transaction">
           <a href="./transactions.html">
-            <h2 class="ms-4 ms-sm-0">
+            <h2 class="">
               <img
                 class="back"
-                src="./assets/vector/back-arrow.svg"
+                src="./assets/vector/arrow-left.svg"
                 alt="arrow"
               />
               Back To Transactions
             </h2>
-            <h4 class="text-light-2 fs-14 d-block d-lg-none ms-4 ms-sm-0">
-              09 May 2021
-            </h4>
+            <h4 class="text-light-2 fs-14 d-block d-lg-none">09 May 2021</h4>
           </a>
 
           <div class="transaction mt-5 pt-lg-4 pt-0">
