--- a/transactions.html
+++ b/transactions.html
@@ -467,24 +467,24 @@
               "
             >
               <h5 class="text-light-2">02 MAR 2021</h5>
-            </div>
-            <div class="d-none d-lg-flex">
-              <div class="custom-form-control search-sm">
-                <input
-                  class="custom-input"
-                  type="search"
-                  placeholder="Search Your Fund"
-                />
-                <img src="./assets/vector/search.svg" alt="search" />
-              </div>
-              <div class="custom-form-control filter">
-                <div class="custom-select">
-                  <select>
-                    <option value="1">All</option>
-                    <option value="2">Success</option>
-                    <option value="3">Unsuccess</option>
-                    <option value="4">Pending</option>
-                  </select>
+              <div class="d-none d-lg-flex justify-content-end">
+                <div class="custom-form-control search-sm">
+                  <input
+                    class="custom-input"
+                    type="search"
+                    placeholder="Search Your Fund"
+                  />
+                  <img src="./assets/vector/search.svg" alt="search" />
+                </div>
+                <div class="custom-form-control filter">
+                  <div class="custom-select">
+                    <select>
+                      <option value="1">All</option>
+                      <option value="2">Success</option>
+                      <option value="3">Unsuccess</option>
+                      <option value="4">Pending</option>
+                    </select>
+                  </div>
                 </div>
               </div>
             </div>
