--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
               </g>
             </svg>
 
-            <span class="fs-16">Your Performance Tracker</span>
+            <span class="fs-16 fw-600">Your Performance Tracker</span>
           </div>
         </a>
-        <a href="#" class="d-flex d-md-none"
+        <a href="#" class="d-flex d-769-none"
           ><div>
             <svg
               id="Group_10863"
@@ -226,11 +226,11 @@
               </g>
             </svg>
 
-            <span class="fs-16">Cart</span>
+            <span class="fs-16 fw-600">Cart</span>
           </div>
           <div class="count red"><span>5</span></div>
         </a>
-        <a href="#" class="d-flex d-md-none"
+        <a href="#" class="d-flex d-769-none"
           ><div>
             <svg
               id="Group_10864"
@@ -277,7 +277,7 @@
               </g>
             </svg>
 
-            <span class="fs-16">Notifications</span>
+            <span class="fs-16 fw-600">Notifications</span>
           </div>
           <div class="count yellow"><span>1</span></div>
         </a>
@@ -346,7 +346,7 @@
               </g>
             </svg>
 
-            <span class="fs-16">Reads</span>
+            <span class="fs-16 fw-600">Reads</span>
           </div>
         </a>
         <a href="#" class=""
@@ -465,7 +465,7 @@
               </g>
             </svg>
 
-            <span class="fs-16">About us</span>
+            <span class="fs-16 fw-600">About us</span>
           </div>
         </a>
         <a href="#" class=""
@@ -528,18 +528,18 @@
               </g>
             </svg>
 
-            <span class="fs-16">Home</span>
+            <span class="fs-16 fw-600">Home</span>
           </div>
         </a>
       </div>
 
       <div class="setting">
-        <div class="title fs-16 fs-1366-14 fs-768-16 fs-490-14 fw-600">
+        <div class="title fs-16 fs-1366-14 fs-768-16 fs-490-14 fw-700">
           ACCOUNT & SETTING
         </div>
 
         <div class="setting-main">
-          <div class="item">
+          <a class="item">
             <div>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -643,8 +643,8 @@
                 />
               </g>
             </svg>
-          </div>
-          <div class="item">
+          </a>
+          <a class="item">
             <div>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -745,8 +745,8 @@
                 />
               </g>
             </svg>
-          </div>
-          <div class="item">
+          </a>
+          <a class="item">
             <div>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -872,8 +872,8 @@
                 />
               </g>
             </svg>
-          </div>
-          <div class="item">
+          </a>
+          <a class="item">
             <div>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -955,8 +955,8 @@
                 />
               </g>
             </svg>
-          </div>
-          <div class="item">
+          </a>
+          <a class="item">
             <div>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -1058,7 +1058,7 @@
                 />
               </g>
             </svg>
-          </div>
+          </a>
         </div>
       </div>
     </div>
@@ -1087,7 +1087,7 @@
         </div>
 
         <div class="setting-main">
-          <div class="item">
+          <a href="#" class="item">
             <div>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -1191,8 +1191,8 @@
                 />
               </g>
             </svg>
-          </div>
-          <div class="item">
+          </a>
+          <a href="#" class="item">
             <div>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -1293,8 +1293,8 @@
                 />
               </g>
             </svg>
-          </div>
-          <div class="item">
+          </a>
+          <a href="#" class="item">
             <div>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -1420,8 +1420,8 @@
                 />
               </g>
             </svg>
-          </div>
-          <div class="item">
+          </a>
+          <a href="#" class="item">
             <div>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -1503,8 +1503,8 @@
                 />
               </g>
             </svg>
-          </div>
-          <div class="item">
+          </a>
+          <a href="#" class="item">
             <div>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -1606,7 +1606,7 @@
                 />
               </g>
             </svg>
-          </div>
+          </a>
         </div>
       </div>
     </div>
@@ -1626,12 +1626,12 @@
         <button class="btn btn-bg-primary signup">Sign Up</button>
       </div>
     </div>
-    <div class="custom-modal xs d-none" id="message-modal">
+    <div class="custom-modal xs" id="message-modal">
       <div class="close">
         <img src="./assets/images/close.svg" alt="close" />
       </div>
       <div class="modal-body">
-        <h2 class="fw-400 mb-4 resist-size">Sent us a massage</h2>
+        <h2 class="fw-600 mb-4 resist-size">Sent us a massage</h2>
         <div class="custom-form-control pt-3">
           <input
             class="custom-input"
@@ -1653,7 +1653,9 @@
             rows="5"
           ></textarea>
         </div>
-        <button class="btn btn-bg-primary mt-4">Sent message</button>
+        <div class="bottom-btn-sm">
+          <button class="btn btn-bg-primary mt-4">Sent message</button>
+        </div>
       </div>
     </div>
     <div class="custom-modal xs d-none" id="call-modal">
@@ -1819,7 +1821,9 @@
             </svg>
           </div>
         </div>
-        <button class="btn btn-bg-primary mt-4">Call</button>
+        <div class="bottom-btn-sm">
+          <button class="btn btn-bg-primary mt-4">Call</button>
+        </div>
       </div>
     </div>
     <div class="custom-modal md d-none" id="signup-modal">
@@ -1858,7 +1862,7 @@
               </div>
             </div>
             <div class="col-md-7 order-1 order-md-2">
-              <h2 class="fw-400 mb-4 resist-size text-center text-md-left">
+              <h2 class="fw-600 mb-4 resist-size text-center text-md-left">
                 Sign Up
               </h2>
               <div class="custom-form-control pt-3">
