--- a/index.html
+++ b/index.html
@@ -1626,7 +1626,7 @@
         <button class="btn btn-bg-primary signup">Sign Up</button>
       </div>
     </div>
-    <div class="custom-modal xs" id="message-modal">
+    <div class="custom-modal xs d-none" id="message-modal">
       <div class="close">
         <img src="./assets/images/close.svg" alt="close" />
       </div>
