--- a/allocation-confirmation.html
+++ b/allocation-confirmation.html
@@ -66,7 +66,9 @@
 
           <div class="btns">
             <button class="btn btn-outlined-dark">Cancel</button>
-            <button class="btn btn-bg-primary fs-575-16">Confirm</button>
+            <div class="bottom-btn-sm">
+              <button class="btn btn-bg-primary fs-575-16">Confirm</button>
+            </div>
           </div>
         </div>
       </div>
