--- a/index.html
+++ b/index.html
@@ -1630,7 +1630,7 @@
       <div class="close">
         <img src="./assets/images/close.svg" alt="close" />
       </div>
-      <div class="modal-body">
+      <div class="modal-body no-head">
         <h2 class="fw-600 mb-4 resist-size">Sent us a massage</h2>
         <div class="custom-form-control pt-3">
           <input
@@ -1662,7 +1662,7 @@
       <div class="close">
         <img src="./assets/images/close.svg" alt="close" />
       </div>
-      <div class="modal-body">
+      <div class="modal-body no-head">
         <h2 class="fw-400 mb-4 resist-size">Request Call Back</h2>
         <div class="custom-form-control pt-3">
           <input
@@ -1830,7 +1830,7 @@
       <div class="close">
         <img src="./assets/images/close.svg" alt="close" />
       </div>
-      <div class="modal-body">
+      <div class="modal-body no-head">
         <div class="container">
           <div class="row">
             <div
@@ -1998,7 +1998,7 @@
       <div class="close">
         <img src="./assets/images/close.svg" alt="close" />
       </div>
-      <div class="modal-body">
+      <div class="modal-body no-head">
         <div class="container">
           <div class="row">
             <div class="col-md-5 d-flex justify-content-center mb-4 mb-md-0">
@@ -2219,7 +2219,7 @@
               <img src="./assets/images/close.svg" />
             </button>
           </div>
-          <div class="modal-body">
+          <div class="modal-body no-head">
             <div class="signinbox">
               <div class="signinbox_p0">
                 <h2>Sign In</h2>
@@ -2290,7 +2290,7 @@
               <img src="./assets/images/close.svg" />
             </button>
           </div>
-          <div class="modal-body">
+          <div class="modal-body no-head">
             <div class="menuofplanyy">
               <ul>
                 <li><a href="#" class="active">Home</a></li>
