--- a/service.html
+++ b/service.html
@@ -467,12 +467,12 @@
                       </div>
                       <div class="Generated_Financial_plans_data_box_p3">
                         <a href="#"
-                          ><img src="./assets/images/delete-1.svg" /><img
-                            src="./assets/images/delete.svg"
+                          ><img src="./assets/images/contabhb1.svg" /><img
+                            src="./assets/images/contabhb1h.svg"
                         /></a>
                         <a href="#"
-                          ><img src="./assets/images/edit-1.svg" /><img
-                            src="./assets/images/edit.svg"
+                          ><img src="./assets/images/contabhb2.svg" /><img
+                            src="./assets/images/contabhb2h.svg"
                         /></a>
                       </div>
                       <a
@@ -517,13 +517,13 @@
                         </p>
                       </div>
                       <div class="Generated_Financial_plans_data_box_p3">
-                        <a href="#" class="removeplnbox"
-                          ><img src="./assets/images/delete-1.svg" /><img
-                            src="./assets/images/delete.svg"
+                        <a href="#"
+                          ><img src="./assets/images/contabhb1.svg" /><img
+                            src="./assets/images/contabhb1h.svg"
                         /></a>
-                        <a data-toggle="modal" data-target="#exampleModal"
-                          ><img src="./assets/images/edit-1.svg" /><img
-                            src="./assets/images/edit.svg"
+                        <a href="#"
+                          ><img src="./assets/images/contabhb2.svg" /><img
+                            src="./assets/images/contabhb2h.svg"
                         /></a>
                       </div>
                       <a
@@ -579,12 +579,12 @@
                       </div>
                       <div class="Generated_Financial_plans_data_box_p3">
                         <a href="#"
-                          ><img src="./assets/images/delete-1.svg" /><img
-                            src="./assets/images/delete.svg"
+                          ><img src="./assets/images/contabhb1.svg" /><img
+                            src="./assets/images/contabhb1h.svg"
                         /></a>
                         <a href="#"
-                          ><img src="./assets/images/edit-1.svg" /><img
-                            src="./assets/images/edit.svg"
+                          ><img src="./assets/images/contabhb2.svg" /><img
+                            src="./assets/images/contabhb2h.svg"
                         /></a>
                       </div>
                       <a
@@ -626,12 +626,12 @@
                       </div>
                       <div class="Generated_Financial_plans_data_box_p3">
                         <a href="#"
-                          ><img src="./assets/images/delete-1.svg" /><img
-                            src="./assets/images/delete.svg"
+                          ><img src="./assets/images/contabhb1.svg" /><img
+                            src="./assets/images/contabhb1h.svg"
                         /></a>
                         <a href="#"
-                          ><img src="./assets/images/edit-1.svg" /><img
-                            src="./assets/images/edit.svg"
+                          ><img src="./assets/images/contabhb2.svg" /><img
+                            src="./assets/images/contabhb2h.svg"
                         /></a>
                       </div>
                       <a
