--- a/investment-ready.html
+++ b/investment-ready.html
@@ -84,7 +84,7 @@
 
             <div class="form">
               <div class="text">
-                <h1 class="fw-normal mt-2 me-5">
+                <h1 class="mt-2 me-5 fw-600">
                   Check if you're <br />
                   <div class="text-yellow">investment ready</div>
                 </h1>
