--- a/index.html
+++ b/index.html
@@ -1663,7 +1663,7 @@
         <img src="./assets/images/close.svg" alt="close" />
       </div>
       <div class="modal-body no-head">
-        <h2 class="fw-400 mb-4 resist-size">Request Call Back</h2>
+        <h2 class="fw-600 mb-4 resist-size">Request Call Back</h2>
         <div class="custom-form-control pt-3">
           <input
             class="custom-input"
@@ -1982,7 +1982,12 @@
                 </button>
                 <span class="my-2 my-sm-0 d-sm-inline d-block"> or </span>
                 <button class="btn btn-rounded">
-                  <img src="./assets/images/google.svg" alt="google" /> Google
+                  <img
+                    class="mr-1"
+                    src="./assets/images/google.svg"
+                    alt="google"
+                  />
+                  Google
                 </button>
               </div>
               <div class="fs-16 mt-sm-5 mt-3 text-center text-md-left">
