notifications, blogs, profile and transaction pages done

--- a/notifications.html
+++ b/notifications.html
@@ -20,7 +20,7 @@
   <body>
     <!-- --------------------------------------------- NAVBAR START --------------------------------------------- -->
 
-    <nav id="navbar-sm" class="notification-navbar sm d-none d-md-block">
+    <nav id="navbar-sm" class="notification-navbar sm d-768-none">
       <div>
         <a href="#" class="logo">
           <img src="./assets/vector/logo.svg" alt="logo" />
@@ -390,13 +390,11 @@
 
     <!-- --------------------------------------------- MAIN START --------------------------------------------- -->
 
-    <main>
-      <section
-        id="notifications"
-        class="page-container no-padding lg d-block pt-3 pt-md-0"
-      >
+    <main id="sidenav-right-container" class="transactions-sidenav-right">
+      <section id="notifications">
         <div class="head">
-          <div class="text ps-4 ps-sm-0">
+          <img class="close" src="./assets/images/close.svg" alt="close" />
+          <div class="text">
             <h2 class="fs-1366-24">
               <img src="./assets/vector/back-arrow.svg" alt="arrow" /> All
               Notifications
@@ -406,8 +404,10 @@
             </h4>
           </div>
           <div>
-            <button class="btn p-0">
-              <h4 class="fs-18 fs-1366-14 fw-normal">Mark All As Read</h4>
+            <button class="btn p-0 d-flex align-items-end">
+              <h4 class="fs-18 fs-1366-14 fs-768-12 fw-600">
+                Mark All As Read
+              </h4>
             </button>
           </div>
         </div>
@@ -432,13 +432,21 @@
             </svg>
 
             <div class="text">
-              <h4 class="fw-normal fs-18 fs-1366-14">
+              <h4 class="fw-600 fs-18 fs-1366-14">
                 All Funds Running On Track.
               </h4>
-              <h5 class="text-light-2">24 OCT 2021</h5>
+              <h5 class="text-light-2 fs-1366-12">24 OCT 2021</h5>
             </div>
             <div class="action">
-              <button class="btn btn-bg-light w-100px w-80px px-0 text-center">
+              <button
+                class="
+                  btn btn-bg-light
+                  w-100px w-1366-80px
+                  h-32px
+                  px-0
+                  text-center
+                "
+              >
                 <span class="text-light-2 fs-17 fs-1366-14">Action</span>
               </button>
             </div>
@@ -460,13 +468,21 @@
             </svg>
 
             <div class="text">
-              <h4 class="fw-normal fs-18 fs-1366-14">
+              <h4 class="fw-600 fs-18 fs-1366-14">
                 Add Your EPF Account To Achieve Your Goals Faster.
               </h4>
-              <h5 class="text-light-2">24 OCT 2021</h5>
+              <h5 class="text-light-2 fs-1366-12">24 OCT 2021</h5>
             </div>
             <div class="action">
-              <button class="btn btn-bg-light w-100px w-80px px-0 text-center">
+              <button
+                class="
+                  btn btn-bg-light
+                  w-100px w-1366-80px
+                  h-32px
+                  px-0
+                  text-center
+                "
+              >
                 <span class="text-light-2 fs-17 fs-1366-14">Action</span>
               </button>
             </div>
@@ -488,13 +504,21 @@
             </svg>
 
             <div class="text">
-              <h4 class="fw-normal fs-18 fs-1366-14">
+              <h4 class="fw-600 fs-18 fs-1366-14">
                 All Funds Running On Track.
               </h4>
-              <h5 class="text-light-2">24 OCT 2021</h5>
+              <h5 class="text-light-2 fs-1366-12">24 OCT 2021</h5>
             </div>
             <div class="action">
-              <button class="btn btn-bg-light w-100px w-80px px-0 text-center">
+              <button
+                class="
+                  btn btn-bg-light
+                  w-100px w-1366-80px
+                  h-32px
+                  px-0
+                  text-center
+                "
+              >
                 <span class="text-light-2 fs-17 fs-1366-14">Action</span>
               </button>
             </div>
@@ -516,13 +540,21 @@
             </svg>
 
             <div class="text">
-              <h4 class="fw-normal fs-18 fs-1366-14">
+              <h4 class="fw-600 fs-18 fs-1366-14">
                 All Funds Running On Track.
               </h4>
-              <h5 class="text-light-2">24 OCT 2021</h5>
+              <h5 class="text-light-2 fs-1366-12">24 OCT 2021</h5>
             </div>
             <div class="action">
-              <button class="btn btn-bg-light w-100px w-80px px-0 text-center">
+              <button
+                class="
+                  btn btn-bg-light
+                  w-100px w-1366-80px
+                  h-32px
+                  px-0
+                  text-center
+                "
+              >
                 <span class="text-light-2 fs-17 fs-1366-14">Action</span>
               </button>
             </div>
@@ -544,13 +576,21 @@
             </svg>
 
             <div class="text">
-              <h4 class="fw-normal fs-18 fs-1366-14">
+              <h4 class="fw-600 fs-18 fs-1366-14">
                 All Funds Running On Track.
               </h4>
-              <h5 class="text-light-2">24 OCT 2021</h5>
+              <h5 class="text-light-2 fs-1366-12">24 OCT 2021</h5>
             </div>
             <div class="action">
-              <button class="btn btn-bg-light w-100px w-80px px-0 text-center">
+              <button
+                class="
+                  btn btn-bg-light
+                  w-100px w-1366-80px
+                  h-32px
+                  px-0
+                  text-center
+                "
+              >
                 <span class="text-light-2 fs-17 fs-1366-14">Action</span>
               </button>
             </div>
@@ -572,13 +612,21 @@
             </svg>
 
             <div class="text">
-              <h4 class="fw-normal fs-18 fs-1366-14">
+              <h4 class="fw-600 fs-18 fs-1366-14">
                 All Funds Running On Track.
               </h4>
-              <h5 class="text-light-2">24 OCT 2021</h5>
+              <h5 class="text-light-2 fs-1366-12">24 OCT 2021</h5>
             </div>
             <div class="action">
-              <button class="btn btn-bg-light w-100px w-80px px-0 text-center">
+              <button
+                class="
+                  btn btn-bg-light
+                  w-100px w-1366-80px
+                  h-32px
+                  px-0
+                  text-center
+                "
+              >
                 <span class="text-light-2 fs-17 fs-1366-14">Action</span>
               </button>
             </div>
@@ -600,13 +648,21 @@
             </svg>
 
             <div class="text">
-              <h4 class="fw-normal fs-18 fs-1366-14">
+              <h4 class="fw-600 fs-18 fs-1366-14">
                 All Funds Running On Track.
               </h4>
-              <h5 class="text-light-2">24 OCT 2021</h5>
+              <h5 class="text-light-2 fs-1366-12">24 OCT 2021</h5>
             </div>
             <div class="action">
-              <button class="btn btn-bg-light w-100px w-80px px-0 text-center">
+              <button
+                class="
+                  btn btn-bg-light
+                  w-100px w-1366-80px
+                  h-32px
+                  px-0
+                  text-center
+                "
+              >
                 <span class="text-light-2 fs-17 fs-1366-14">Action</span>
               </button>
             </div>
@@ -628,13 +684,21 @@
             </svg>
 
             <div class="text">
-              <h4 class="fw-normal fs-18 fs-1366-14">
+              <h4 class="fw-600 fs-18 fs-1366-14">
                 All Funds Running On Track.
               </h4>
-              <h5 class="text-light-2">24 OCT 2021</h5>
+              <h5 class="text-light-2 fs-1366-12">24 OCT 2021</h5>
             </div>
             <div class="action">
-              <button class="btn btn-bg-light w-100px w-80px px-0 text-center">
+              <button
+                class="
+                  btn btn-bg-light
+                  w-100px w-1366-80px
+                  h-32px
+                  px-0
+                  text-center
+                "
+              >
                 <span class="text-light-2 fs-17 fs-1366-14">Action</span>
               </button>
             </div>
@@ -656,13 +720,21 @@
             </svg>
 
             <div class="text">
-              <h4 class="fw-normal fs-18 fs-1366-14">
+              <h4 class="fw-600 fs-18 fs-1366-14">
                 All Funds Running On Track.
               </h4>
-              <h5 class="text-light-2">24 OCT 2021</h5>
+              <h5 class="text-light-2 fs-1366-12">24 OCT 2021</h5>
             </div>
             <div class="action">
-              <button class="btn btn-bg-light w-100px w-80px px-0 text-center">
+              <button
+                class="
+                  btn btn-bg-light
+                  w-100px w-1366-80px
+                  h-32px
+                  px-0
+                  text-center
+                "
+              >
                 <span class="text-light-2 fs-17 fs-1366-14">Action</span>
               </button>
             </div>
