--- a/transactions.html
+++ b/transactions.html
@@ -20,7 +20,7 @@
   <body>
     <!-- --------------------------------------------- NAVBAR START --------------------------------------------- -->
 
-    <nav id="navbar-sm" class="notification-navbar sm d-none d-md-block">
+    <nav id="navbar-sm" class="notification-navbar sm d-768-none">
       <div>
         <a href="#" class="logo">
           <img src="./assets/vector/logo.svg" alt="logo" />
@@ -394,10 +394,7 @@
       <main id="sidenav-right-content" class="transactions-sidenav-right">
         <section id="transactions">
           <div class="title">
-            <h2>
-              <img class="back" src="./assets/vector/back-arrow.svg" alt="" /> All
-              Transactions
-            </h2>
+            
 
             <div
               class="
@@ -405,11 +402,15 @@
                 d-flex
                 justify-content-between
                 align-items-center
-                mt-lg-4 mt-2
+                mt-4
               "
             >
-              <h5 class="text-light-2">02 MAR 2021</h5>
-              <div class="d-none d-lg-flex justify-content-end">
+              <h2 class="fs-1366-24 fs-575-20">
+              <img class="back" src="./assets/vector/back-arrow.svg" alt="" /> All
+              Transactions
+              <div class="text-light-2 fs-14 mt-2 d-769-none">02 May 2021</div>
+            </h2>
+              <div class="d-flex justify-content-end search-sm-container">
                 <div class="custom-form-control search-sm">
                   <input
                     class="custom-input"
@@ -439,7 +440,7 @@
                   <img src="./assets/images/bank_logo.svg" alt="logo" />
                 </div>
                 <div class="text ms-3">
-                  <h4 class="fs-18 fs-1366-14 fw-normal">
+                  <h4 class="fs-18 fw-600 fs-1366-14">
                     ICICI Prudential Savings Fund (G)
                   </h4>
                   <h5 class="text-light-2 fs-1366-12 mt-1">
@@ -449,7 +450,7 @@
               </div>
               <div>
                 <div class="invest">
-                  <h4 class="text-light-2 fs-1366-14 fw-normal">INVEST</h4>
+                  <h4 class="text-light-2 fs-1366-14 fs-768-12 fw-normal">INVEST</h4>
                 </div>
                 <div class="funds">
                   <h4 class="text-light-2 fs-1366-14 fw-normal">
@@ -477,7 +478,7 @@
                   <img src="./assets/images/bank_logo-2.svg" alt="logo" />
                 </div>
                 <div class="text ms-3">
-                  <h4 class="fs-18 fw-normal fs-1366-14">
+                  <h4 class="fs-18 fw-600 fs-1366-14">
                     L&T Emerging Businesses Growth…
                   </h4>
                   <h5 class="text-light-2 fs-1366-12 mt-1">
@@ -487,7 +488,7 @@
               </div>
               <div>
                 <div class="invest">
-                  <h4 class="text-light-2 fs-1366-14 fw-normal">INVEST</h4>
+                  <h4 class="text-light-2 fs-1366-14 fs-768-12 fw-normal">INVEST</h4>
                 </div>
                 <div class="funds">
                   <h4 class="text-light-2 fs-1366-14 fw-normal">
@@ -515,7 +516,7 @@
                   <img src="./assets/images/bank_logo.svg" alt="logo" />
                 </div>
                 <div class="text ms-3">
-                  <h4 class="fs-18 fw-normal fs-1366-14">
+                  <h4 class="fs-18 fw-600 fs-1366-14">
                     ICICI Prudential Savings Fund (G)
                   </h4>
                   <h5 class="text-light-2 fs-1366-12 mt-1">
@@ -525,7 +526,7 @@
               </div>
               <div>
                 <div class="invest">
-                  <h4 class="text-light-2 fs-1366-14 fw-normal">WITHDRAW</h4>
+                  <h4 class="text-light-2 fs-1366-14 fs-768-12 fw-normal">WITHDRAW</h4>
                 </div>
                 <div class="funds">
                   <h4 class="text-light-2 fs-1366-14 fw-normal">
@@ -553,7 +554,7 @@
                   <img src="./assets/images/bank_logo.svg" alt="logo" />
                 </div>
                 <div class="text ms-3">
-                  <h4 class="fs-18 fw-normal fs-1366-14">
+                  <h4 class="fs-18 fw-600 fs-1366-14">
                     ICICI Prudential Savings Fund (G)
                   </h4>
                   <h5 class="text-light-2 fs-1366-12 mt-1">
@@ -563,7 +564,7 @@
               </div>
               <div>
                 <div class="invest">
-                  <h4 class="text-light-2 fs-1366-14 fw-normal">INVEST</h4>
+                  <h4 class="text-light-2 fs-1366-14 fs-768-12 fw-normal">INVEST</h4>
                 </div>
                 <div class="funds">
                   <h4 class="text-light-2 fs-1366-14 fw-normal">
@@ -591,7 +592,7 @@
                   <img src="./assets/images/bank_logo.svg" alt="logo" />
                 </div>
                 <div class="text ms-3">
-                  <h4 class="fs-18 fw-normal fs-1366-14">
+                  <h4 class="fs-18 fw-600 fs-1366-14">
                     ICICI Prudential Savings Fund (G)
                   </h4>
                   <h5 class="text-light-2 fs-1366-12 mt-1">
@@ -601,7 +602,7 @@
               </div>
               <div>
                 <div class="invest">
-                  <h4 class="text-light-2 fs-1366-14 fw-normal">INVEST</h4>
+                  <h4 class="text-light-2 fs-1366-14 fs-768-12 fw-normal">INVEST</h4>
                 </div>
                 <div class="funds">
                   <h4 class="text-light-2 fs-1366-14 fw-normal">
@@ -629,7 +630,7 @@
                   <img src="./assets/images/bank_logo.svg" alt="logo" />
                 </div>
                 <div class="text ms-3">
-                  <h4 class="fs-18 fw-normal fs-1366-14">
+                  <h4 class="fs-18 fw-600 fs-1366-14">
                     ICICI Prudential Savings Fund (G)
                   </h4>
                   <h5 class="text-light-2 fs-1366-12 mt-1">
@@ -639,7 +640,7 @@
               </div>
               <div>
                 <div class="invest">
-                  <h4 class="text-light-2 fs-1366-14 fw-normal">INVEST</h4>
+                  <h4 class="text-light-2 fs-1366-14 fs-768-12 fw-normal">INVEST</h4>
                 </div>
                 <div class="funds">
                   <h4 class="text-light-2 fs-1366-14 fw-normal">
@@ -667,7 +668,7 @@
                   <img src="./assets/images/bank_logo-3.svg" alt="logo" />
                 </div>
                 <div class="text ms-3">
-                  <h4 class="fs-18 fw-normal fs-1366-14">
+                  <h4 class="fs-18 fw-600 fs-1366-14">
                     HDFC Banking And Financial Services…
                   </h4>
                   <h5 class="text-light-2 fs-1366-12 mt-1">
@@ -677,7 +678,7 @@
               </div>
               <div>
                 <div class="invest">
-                  <h4 class="text-light-2 fs-1366-14 fw-normal">WITHDRAW</h4>
+                  <h4 class="text-light-2 fs-1366-14 fs-768-12 fw-normal">WITHDRAW</h4>
                 </div>
                 <div class="funds">
                   <h4 class="text-light-2 fs-1366-14 fw-normal">
@@ -705,7 +706,7 @@
                   <img src="./assets/images/bank_logo.svg" alt="logo" />
                 </div>
                 <div class="text ms-3">
-                  <h4 class="fs-18 fw-normal fs-1366-14">
+                  <h4 class="fs-18 fw-600 fs-1366-14">
                     ICICI Prudential Savings Fund (G)
                   </h4>
                   <h5 class="text-light-2 fs-1366-12 mt-1">
@@ -715,7 +716,7 @@
               </div>
               <div>
                 <div class="invest">
-                  <h4 class="text-light-2 fs-1366-14 fw-normal">INVEST</h4>
+                  <h4 class="text-light-2 fs-1366-14 fs-768-12 fw-normal">INVEST</h4>
                 </div>
                 <div class="funds">
                   <h4 class="text-light-2 fs-1366-14 fw-normal">
