--- a/blogs.html
+++ b/blogs.html
@@ -57,8 +57,8 @@
                     (Sebi) on Friday put in place detailed guidelines to
                     streamline …
                   </p>
-                  <a class="btn btn-bg-primary" href="#"
-                    >Read Full Article <span class="ms-3">&rarr;</span></a
+                  <a class="btn btn-bg-primary px-0" href="#"
+                    >Read Full Article <span class="ms-1">&rarr;</span></a
                   >
                 </div>
                 <div
