--- a/profile.html
+++ b/profile.html
@@ -398,7 +398,13 @@
       <section id="profile">
         <div class="container-fluid pt-2 p-sm-0 ps-2">
           <a
-            class="d-flex justify-content-start align-items-center my-profile"
+            class="
+              d-flex
+              justify-content-start
+              align-items-center
+              my-profile
+              top-fixed-bar
+            "
             href="./transactions.html"
           >
             <img
@@ -411,7 +417,7 @@
         </div>
 
         <div class="profile-main pt-3">
-          <div class="container-fluid px-0">
+          <div class="container-fluid px-0 lower-content">
             <div class="row">
               <div class="col-lg-4 col-sm-6 col-12 order-lg-1 order-2">
                 <div class="custom-form-control">
@@ -676,7 +682,7 @@
             </div>
 
             <div class="mt-5 btn btn-bg-primary d-inline-block">
-              <h4 class="fw-600">+ Add Bank</h4>
+              <h4 class="fw-600 lh-1">+ Add Bank</h4>
             </div>
 
             <div class="deactivate mt-5 mb-4">
